# grimtools-client

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
backend-example/: package.json  server.js
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  GrimTools.manifest  GrimTools.rc  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  steam-ultra.exe.manifest  steam-ultra.rc
src/components/: AuthScreen.tsx  CategoryTabsBar.tsx  GameCard.tsx  Sidebar.tsx  StatusBar.tsx  StatusToast.tsx  TitleBar.tsx  TopBar.tsx  UpdateBanner.tsx
src/components/modals/: AllModals.tsx  EmailVerifyModal.tsx  FixerDisclaimerModal.tsx  ForgotPasswordModal.tsx  GamesSectionDisclaimerModal.tsx  ManualFixDisclaimerModal.tsx  OnlineDownloadModal.tsx
src/components/ui/: card-7.demo.tsx  card-7.tsx  card-8.demo.tsx  card-8.tsx  particles-bg.tsx  scroll-tilted-grid.demo.tsx  scroll-tilted-grid.tsx
src/constants/: colors.ts  layout.ts  translations.ts
src/context/: AppContext.tsx  AuthContext.tsx  GamesContext.tsx  ThemeContext.tsx  UIContext.tsx  apiClient.ts
src/pages/: GamesPage.tsx
update/: latest.json.example
