[package]
name = "GrimTools"
version = "0.1.5"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "steam_ultra_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
embed-resource = "2"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream", "native-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
winreg = "0.52"
zip = "0.6"
sysinfo = "0.30"
